--- a/styles/style.css
+++ b/styles/style.css
@@ -289,3 +289,49 @@
     width: 181.67px;
     height: 50px;
 }
+/* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+         extra styling
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
+.extra{
+   background-color: #FFF4E7;
+   height: 550px;
+   text-align: center;
+   margin-left: 100px;
+   margin-right: 100px;
+   border: none;
+   border-radius: 8px;
+}
+.ext-title-h{
+   padding-top: 70px;
+   font-weight: 700;
+   font-size: 40px;
+
+}
+.ex-in{
+   padding-top: 20px;
+   padding-bottom: 20px;
+   width: 325px;
+   text-align: center;
+   border: none;
+   border-radius: 5px;
+   font-weight: 700;
+   font-size: 20px;
+}
+
+/*%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+       footer styling
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%% */
+ footer{
+   margin: 130px 230px 130px;
+   width: 70%;
+   height: 100px;
+   text-align: center;
+   background: #FFF4E7;
+   border-radius: 8px;
+ }
+ .fot-p{
+   padding: 40px 0;
+   font-weight: 400;
+   font-size: 20px;
+   color: #424242;
+ }
